feat: add partner inventory sync api
